@@ -95,9 +95,10 @@ namespace Orthanc
 
     std::string GenerateUuid();
 
-    std::string GetNowIsoString();
+    std::string GetNowIsoString(bool utc);
 
     void GetNowDicom(std::string& date,
-                     std::string& time);
+                     std::string& time,
+                     bool utc);
   }
 }
