@@ -831,7 +831,7 @@ namespace Orthanc
     
     // Inject time-related information
     std::string date, time;
-    SystemToolbox::GetNowDicom(date, time);
+    SystemToolbox::GetNowDicom(date, time, true /* use UTC time (not local time) */);
     dicom.ReplacePlainString(DICOM_TAG_ACQUISITION_DATE, date);
     dicom.ReplacePlainString(DICOM_TAG_ACQUISITION_TIME, time);
     dicom.ReplacePlainString(DICOM_TAG_CONTENT_DATE, date);
