@@ -5,6 +5,9 @@ REST API
 --------
 
 * "/system" URI returns the version of the Orthanc REST API
+* "/tools/now" returns the current UTC (universal) time
+* "/tools/now-local" returns the curent local time.
+  This was the behavior of "/tools/now" until release 1.3.1.
 * Added "?expand" GET argument to "/peers" and "/modalities" routes
 * New URI: "/tools/create-media-extended" to generate a DICOMDIR
   archive from several resources, including additional type-3 tags
@@ -12,6 +15,7 @@ REST API
 Maintenance
 -----------
 
+* Orthanc now uses UTC (universal time) instead of local time in its database
 * Fix to allow creating DICOM instances with empty Specific Character Set (0008,0005)
 * Upgrade to curl 7.57.0 for static and Windows builds
 * Support of Linux Standard Base
